# AoC2024

./: Cargo.toml  output
src/01/: 01.rs  01a.rs  01b.rs
src/02/: 02a.rs  02b.rs
src/03/: 03a.rs  03b.rs
src/04/: 04a.rs  04b.rs
src/05/: 05b.rs
src/06/: 06a.rs  06b.rs
src/07/: 07a.rs  07b.rs
src/08/: 08a.rs  08b.rs  example2.txt
src/09/: 09a.rs  09b.rs
src/10/: 10a.rs  10b.rs  example3.txt
src/11/: 11a.rs  11b.rs
